--- a/docs/app/docs/components/button/page.mdx
+++ b/docs/app/docs/components/button/page.mdx
@@ -17,7 +17,7 @@ The button component offers three distinct variants: `filled`, `outlined` and `t
 <DefaultButtons/>
 
 <details>
-  <summary>expand code</summary>
+  <summary>Expand code</summary>
 
   ```jsx
   <Button variant={'filled'}>Filled</Button>
@@ -37,7 +37,7 @@ Filled buttons are high-emphasis elements, typically used for primary actions wi
 <Buttons variant={'filled'}/>
 
 <details>
-  <summary>expand code</summary>
+  <summary>Expand code</summary>
 
   ```jsx
   <Button variant={'filled'}>Filled</Button>
@@ -52,7 +52,7 @@ Outlined buttons are medium-emphasis elements, commonly used for secondary actio
 <Buttons variant={'outlined'}/>
 
 <details>
-  <summary>expand code</summary>
+  <summary>Expand code</summary>
 
   ```jsx
   <Button variant={'outlined'}>Outlined</Button>
@@ -67,7 +67,7 @@ Text buttons are low-emphasis elements, generally used for less critical actions
 <Buttons variant={'text'}/>
 
 <details>
-  <summary>expand code</summary>
+  <summary>Expand code</summary>
 
   ```jsx
   <Button variant={'text'}>Text</Button>
@@ -82,7 +82,7 @@ The button component comes in three different sizes: `small`, `medium` and `larg
 <ButtonSizes/>
 
 <details>
-  <summary>expand code</summary>
+  <summary>Expand code</summary>
 
   ```jsx
   <Button variant={'filled'} size={'small'}>Small</Button>
@@ -106,7 +106,7 @@ Each button variant offers predefined color options, along with the ability to s
 <ColorButtons/>
 
 <details>
-  <summary>expand code</summary>
+  <summary>Expand code</summary>
 
   ```jsx
   <Button variant={'filled'}>Filled</Button>
