* removes unnecessary checked prop

--- a/docs/app/docs/components/checkbox/page.mdx
+++ b/docs/app/docs/components/checkbox/page.mdx
@@ -79,12 +79,6 @@ You can customize the checkmark color using any value supported by the `backgrou
   </thead>
   <tbody>
   <Table.Tr>
-    <Table.Td>checked</Table.Td>
-    <Table.Td>`boolean`</Table.Td>
-    <Table.Td>-</Table.Td>
-    <Table.Td>Checked state of the component</Table.Td>
-  </Table.Tr>
-  <Table.Tr>
     <Table.Td>children</Table.Td>
     <Table.Td>`node`</Table.Td>
     <Table.Td>-</Table.Td>
@@ -106,5 +100,5 @@ You can customize the checkmark color using any value supported by the `backgrou
 </Table>
 
 <Callout type={'info'}>
-  In addition to these props the component uses the default html `input` props (e.g. `onChange`).
+  In addition to these props the component uses the default html `input` props (e.g. `checked`).
 </Callout>
