* updates dialog doc entry

--- a/docs/app/docs/components/page.mdx
+++ b/docs/app/docs/components/page.mdx
@@ -39,7 +39,7 @@ View all available components and learn how to use them.
 
 <Cards>
   <Cards.Card
-    title="Modal"
-    href="/docs/components/modal"
+    title="Dialog"
+    href="/docs/components/dialog"
   />
 </Cards>
