--- a/docs/app/docs/components/radio-group/page.mdx
+++ b/docs/app/docs/components/radio-group/page.mdx
@@ -1,13 +1,13 @@
 ---
-title: Radio Group
-description: Showcase and usage guide of the radio group component
+title: RadioGroup
+description: Showcase and usage guide of the radio-group component
 ---
 
 import DefaultRadio, {GroupColor, GroupDirection, GroupInactive} from './_radioGroup';
 import {Callout} from 'nextra/components';
 import {Table} from 'nextra/components';
 
-# Radio Group
+# RadioGroup
 
 The radioGroup component allows users to select an option from a set of [radio](/docs/components/radio) components.
 
