* updates dialog docs

--- a/docs/app/docs/components/dialog/page.mdx
+++ b/docs/app/docs/components/dialog/page.mdx
@@ -15,9 +15,10 @@ asking for user input, or confirming actions.
 
 <DefaultDialog/>
 
-## Content
-
-The content of the dialog can be any valid HTML. The dialog-utility-components offer basic styling 
+<Callout type={'info'}>
+  The content of the dialog can be constructed using dialog-specific components
+  (e.g [DialogTitle](/docs/components/dialog-title)), custom HTML, or a combination of both.
+</Callout>
 
 ## Sizes
 
