--- a/docs/app/docs/hooks/contrast-color/page.mdx
+++ b/docs/app/docs/hooks/contrast-color/page.mdx
@@ -10,7 +10,7 @@ based on the contrast ratio of the hex color.
 
 ## Parameters
 
-The function parameter, `hex`, requires A valid 3 or 6-character hexadecimal color code (e.g., #ABC, #AABBCC).
+The function parameter, `hex`, requires A valid 3 or 6-character hexadecimal color code (e.g. #ABC or #AABBCC).
 
 ## Usage Example
 
