--- a/docs/app/docs/components/page.mdx
+++ b/docs/app/docs/components/page.mdx
@@ -35,11 +35,23 @@ View all available components and learn how to use them.
   />
 </Cards>
 
-## Data Display
+## Feedback
 
 <Cards>
   <Cards.Card
     title="Dialog"
     href="/docs/components/dialog"
+  />
+  <Cards.Card
+    title="DialogTitle"
+    href="/docs/components/dialog-title"
+  />
+  <Cards.Card
+    title="DialogContent"
+    href="/docs/components/dialog-content"
+  />
+  <Cards.Card
+    title="DialogControls"
+    href="/docs/components/dialog-controls"
   />
 </Cards>
