adds notification documentation

--- a/docs/app/docs/components/page.mdx
+++ b/docs/app/docs/components/page.mdx
@@ -54,4 +54,8 @@ View all available components and learn how to use them.
     title="DialogControls"
     href="/docs/components/dialog-controls"
   />
+  <Cards.Card
+    title="Notification"
+    href="/docs/components/notification"
+  />
 </Cards>
