--- a/docs/app/docs/components/toast/page.mdx
+++ b/docs/app/docs/components/toast/page.mdx
@@ -3,7 +3,7 @@ title: Toast
 description: Showcase and usage guide of the toast component
 ---
 
-import ToastDefault from './_toast';
+import ToastDefault, {ToastTimeout} from './_toast';
 
 # Toast
 
@@ -13,6 +13,10 @@ unobtrusive manner.
 <ToastDefault/>
 
 ## Timeout
+
+The `timeout` prop defines the duration (in ms) for which the toast will remain visible.
+
+<ToastTimeout/>
 
 ## Content
 
