updates toast component & adds popupProvider

--- a/docs/app/docs/components/page.mdx
+++ b/docs/app/docs/components/page.mdx
@@ -5,7 +5,7 @@ sidebarTitle: Components
 asIndexPage: true
 ---
 
-import { Cards } from 'nextra/components'
+import { Cards } from 'nextra/components';
 
 # Available components
 
