WIP adds backdrop doc entry

--- a/docs/app/docs/components/page.mdx
+++ b/docs/app/docs/components/page.mdx
@@ -58,4 +58,17 @@ View all available components and learn how to use them.
     title="Notification"
     href="/docs/components/notification"
   />
+  <Cards.Card
+    title="Toast"
+    href="/docs/components/toast"
+  />
+</Cards>
+
+## Data Display
+
+<Cards>
+  <Cards.Card
+    title="Backdrop"
+    href="/docs/components/backdrop"
+  />
 </Cards>
