adds toast doc entry

--- a/docs/app/docs/components/notification/page.mdx
+++ b/docs/app/docs/components/notification/page.mdx
@@ -202,6 +202,12 @@ The `action` prop allows you to add your own action to the notification
     <Table.Td>Content of the component</Table.Td>
   </Table.Tr>
   <Table.Tr>
+    <Table.Td>dark</Table.Td>
+    <Table.Td>`boolean`</Table.Td>
+    <Table.Td><b>false</b></Table.Td>
+    <Table.Td>Use the darkmode style</Table.Td>
+  </Table.Tr>
+  <Table.Tr>
     <Table.Td>onClose</Table.Td>
     <Table.Td>`func`</Table.Td>
     <Table.Td>-</Table.Td>
